--- a/data-analysis/data-analysis.Rmd
+++ b/data-analysis/data-analysis.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "PROJECT TITLE"
-author: "NAME HERE"
-date: "TODAY'S DATE"
+title: "NYC Airbnnb Popularity Factors"
+author: "WORLD"
+date: "12/15/2019"
 output: github_document
 ---
 
