--- a/data-analysis/data-analysis.Rmd
+++ b/data-analysis/data-analysis.Rmd
@@ -22,15 +22,15 @@ abnb <- read_csv("AB_NYC_2019.csv")
 
 To start, the following research question will be examined: How does location (borough and neighborhood, for example) influence the price of a listing?
 
-For bootstrapping 
+
+### Part A
+
+For bootstrapping, we need a sample to perform a bootstrap analysis.
 
 ``{r}
 set.seed(111519)
 abnb_sample <- sample_n(abnb, 30)
 ```
-
-
-### Part A
 
 Constructing a bootstrap distribution for the median price of Airbnbs in NYC:
 
