--- a/data-analysis/data-analysis.Rmd
+++ b/data-analysis/data-analysis.Rmd
@@ -35,7 +35,7 @@ abnb_sample <- sample_n(abnb, 30)
 Constructing a bootstrap distribution for the median price of Airbnbs in NYC:
 
 ``{r diff_med_income_boot_dist}
-boot_dist_median_price <- abnb %>%
+boot_dist_median_price <- abnb_sample %>%
   specify(response = price) %>%
   generate(reps = 1000, type = "bootstrap") %>%
   calculate(stat = "median")
