Part B initial answer

--- a/data-analysis/data-analysis.Rmd
+++ b/data-analysis/data-analysis.Rmd
@@ -7,7 +7,7 @@ output: github_document
 
 ### Load packages & data
 
-``{r load-packages, message=FALSE}
+```{r load-packages, message=FALSE}
 library(tidyverse) 
 library(infer)
 library(openintro)
@@ -16,41 +16,80 @@ library(dplyr)
 
 Uploaded the Airbnb data set from Kaggle via a csv file:
 
-``{r load-data, message=FALSE}
+```{r load-data, message=FALSE}
 abnb <- read_csv("AB_NYC_2019.csv")
 ```
 
 To start, the following research question will be examined: How does location (borough and neighborhood, for example) influence the price of a listing?
 
-
 ### Part A
 
-For bootstrapping, we need a sample to perform a bootstrap analysis.
+For bootstrapping, a sample to perform a bootstrap analysis.
 
-``{r}
+```{r}
 set.seed(111519)
 abnb_sample <- sample_n(abnb, 30)
 ```
 
 Constructing a bootstrap distribution for the median price of Airbnbs in NYC:
 
-``{r diff_med_income_boot_dist}
+```{r diff_med_income_boot_dist}
 boot_dist_median_price <- abnb_sample %>%
   specify(response = price) %>%
   generate(reps = 1000, type = "bootstrap") %>%
   calculate(stat = "median")
 ```
 
+Creating a 95% bootstrap confidence interval for the median price of Airbnbs:
 
-
-Creating a 95% bootstrap confidence interval for the difference in median incomes of employed Americans born in the first half of the year vs. those born in the second half:
-
-``{r diff_med_income_boot_dist-ci}
+```{r diff_med_income_boot_dist-ci}
 set.seed(111519)
 (ci_bounds <- get_ci(boot_dist_median_price, level= 0.95))
 ```
 
-We are 95% confident that the difference in median incomes of employed Americans born in the first half of the year vs. those born in the second half is between -6001.25 and 6500.
+We are 95% confident that the median price of Airbnbs per night in NYC is between $92.50 and $138.50.
 
+### Part B
+
+Created a linear model predict Airbnb price by borough (neighbourhood_group):
+```{r}
+abnb %>%
+  mutate(neighbourhood_group = fct_relevel(neighbourhood_group, "Manhattan", "Brooklyn","Staten Island","Queens", "Bronx"))
+
+lm(price ~ neighbourhood_group, data = abnb)
+```
+
+The linear model is:
+
+`price-hat = 87.50 +36.89*(neighbourhood_groupBrooklyn) +12.02*(neighbourhood_groupQueens) +27.32*(neighbourhood_groupStaten Island)`
+
+Manhattan is the baseline level for borough variable.
+
+Intepreting the intercept:
+
+Given that a teaching professor has an average attractiveness of 0, their expected professor evaluation, on average, is 3.982 out of 5. In this case, the intercept does not have a meaningful interpretation because a student could not rate their professor a 0. The least they could rate their professor is a 1.
+
+Interpreting the slopes using m_bty_rank linear model:
+
+For each additional point rating increase in the attractiveness scale (out of 10), the average professor evaluation is expected to increase, on average, by 0.068 rating points (out of 5), holding all else constant.
+
+Professors on the tenure track are expected to have, on average, an average professor evaluation score which is 0.161 rating points lower (out of 5) than the average professor rating of teaching professors, holding all else constant.
+
+Tenured professors are expected to have, on average, an average professor evaluation score which is 0.126 rating points lower (out of 5) than the average professor rating of teaching professors, holding all else constant.
+
+
+### Part C
+
+``{r ellie}
+abnb_sample %>%
+  summarise(price_median = median(price)) %>%
+  mutate(
+    price = case_when(
+      price > price_median ~ "Above",
+      price < price_median ~ "Below"
+    )) 
+```
+
+### Part D
 
 Second research question: How does the way in which a property is listed (type of room, for example) influence the availability of a listing?
