linear model for availability by roomtype

--- a/data-analysis/data-analysis.Rmd
+++ b/data-analysis/data-analysis.Rmd
@@ -211,4 +211,29 @@ tidy_tweets <- abnb_sample %>%
 tidy_tweets %>% slice(1:5)
 ```
 
+Creating a linear model to predict Airbnb availability by roomtype wth entire home/apt as be our baseline.
+
+```{r lm-avail-room-type}
+lm_avail_room_type <- lm(availability_365 ~ room_type, data = abnb_sample)
+
+lm_avail_room_type %>% 
+  tidy() %>% 
+  select(term, estimate) %>%
+  kable(format = "markdown", digits =3)
+
+```
+
+The linear model is:
+
+`price-hat = 121.067 -38.678*(room_typePrivateroom) +25.433*(room_typeShared room)`
+
+Intepreting the intercept:
+
+Given that the Airbnb has the roomtype of entire house/apt the expected availability, on average, is 121 days out of the year. In this case, the intercept does have a meaningful interpretation because an Airbnb could be available for 121 days out of 365 per year.
+
+Interpreting the slopes using lm_avail_room_type linear model:
+
+For an Airbnb with roomtype of private room, the average availability is expected, on average, to be 38.68 days less per year than an Airbnb in wth room type of entire house/apt, holding all else constant.
+
+For an Airbnb with roomtype of shared room, the average availability is expected, on average, to be 25.43 days more per year than an Airbnb in wth room type of entire house/apt, holding all else constant.
 
